<resources>
    <string name="app_name">Story Apps</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="story">Story</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="upload_story">Upload Story</string>
    <string name="logintxt">Silahkan login terlebih dahulu</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="registertxt">Silahkan Register terlebih dahulu</string>
    <string name="nama">Nama</string>
    <string name="namahint">Nama anda</string>
    <string name="emailhint">contoh123@gmail.com</string>
    <string name="passwordhint">password123</string>
    <string name="welcometxt">Welcome to story apps</string>
    <string name="homepage">Homepage</string>
    <string name="add_story">Add story</string>
    <string name="log_out">Log out</string>
    <string name="back_to_homepage">Back to homepage</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="story_picture">Story Picture</string>
    <string name="login_image">Login Image</string>
    <string name="register_image">Register Image</string>
    <string name="add_story_image">Add Story Image</string>
    <string name="logout_image">Logout Image</string>
    <string name="story_list">Story List</string>
    <string name="password_too_short">Password tidak boleh kurang dari 8 karakter</string>
    <string name="password_hint">Masukkan password Anda</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>